src/test/scala/wacc/wacc_examples/invalid/semanticErr/while/control_flow/continueInIfOutsideWhile.wacc
# continue in if but outside while loop

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = 0 ;
  if x == 0
  then continue
  else skip
  fi ;
  exit x 
end
